feat: adapted new internal api and added product-store api
